# chessTracker

./: GTpieces.txt  README.md  compareAccuracy.py  image_to_yolo.py  pieces.txt  plotTiming.py  start.py  start.sh  timing.txt  timingGT.txt  visualization_script.py
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: chess_package.pc
devel/share/chess_package/cmake/: chess_packageConfig.cmake
src/chess_package/: CMakeLists.txt  package.xml
src/chess_package/scripts/: image_to_yolo.py  image_to_yolo_ideal.py  rosbag_to_image.py  state_to_disp.py  state_to_disp_ideal.py  yolo_to_state.py  yolo_to_state_ideal.py
