<?xml version="1.0"?>
<package format="2">
  <name>chess_package</name>
  <version>0.0.0</version>
  <description>The chess_package package</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
